Update design + fix
- Add FavIcon
- Add custom scrollbar
- Remove unneccessary scroll

--- a/src/input.css
+++ b/src/input.css
@@ -136,3 +136,17 @@
 .c31-post-table p{
   @apply text-center mb-0;
 }
+
+/* ! Custom Scrollbar */
+::-webkit-scrollbar{
+  height: 15px;
+  width: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 20px;
+  border: 2px solid #14b8a6;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: rgba(255, 255, 255, 0.534);
+  border-radius: 20px;
+}
